# SJMCL

./: .env.template  .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.EXTRA  README.md  SECURITY.md  code_of_conduct.md  next-i18next.config.mjs  next.config.ts  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug.zh-Hans.yml  feature.yml  feature.zh-Hans.yml  zh.bug.yml  zh.feature.yml
.github/workflows/: build.yml  nightly.yml  release.yml  sign-macos.yml  test-sign.yml  test.yml  update_version_list.yml
docs/: CHANGELOG.zh-Hans.md  CODE_OF_CONDUCT.zh-Hans.md  README.zh-Hans.md  README.zh-Hant.md
scripts/: bump-version.js  check-version.js
scripts/game/: fetch_version_list.js
scripts/locale/: diff.js  gen_placeholder.js  genplaceholder.js  index.js  locale_s2t_convert.py  rm.js  zh_hans2t_opencc.py
scripts/portable/: bundle_assets.py
scripts/release/: bundle_portable_assets.py  generate_changelog_draft.py
scripts/version/: bump.js  check.js  index.js
src/: chakra-theme.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/assets/game/: natives.json  version.txt  versions.txt
src-tauri/assets/icons/: icon.icns
src-tauri/assets/icons/dmg/: volume.icns
src-tauri/assets/icons/raw/: notes.txt
src-tauri/capabilities/: default.json  desktop.json
src-tauri/libs/partial_derive/: Cargo.toml
src-tauri/libs/partial_derive/src/: lib.rs
src-tauri/src/: error.rs  launcher_config.rs  lib.rs  partial.rs  storage.rs  utils.rs
src-tauri/src/account/: commands.rs  constants.rs  helpers.rs  models.rs
src-tauri/src/account/helpers/: authlib_injector.rs  image.rs  misc.rs  mod.rs  offline.rs  skin.rs  storage.rs
src-tauri/src/account/helpers/authlib_injector/: common.rs  constants.rs  info.rs  jar.rs  mod.rs  models.rs  oauth.rs  password.rs
src-tauri/src/account/helpers/microsoft/: constants.rs  mod.rs  models.rs  oauth.rs
src-tauri/src/discover/: commands.rs  models.rs
src-tauri/src/instance/: commands.rs  constants.rs  helpers.rs  models.rs
src-tauri/src/instance/helpers/: asset_index.rs  client.rs  client_jar.rs  client_json.rs  game_jar.rs  game_version.rs  libraries.rs  misc.rs  mod.rs  mod_loader.rs  mods.rs  nbtio.rs  resourcepack.rs  server.rs  version_dir.rs  world.rs
src-tauri/src/instance/helpers/loader/: common.rs  fabric.rs  forge.rs  mod.rs  neoforge.rs
src-tauri/src/instance/helpers/modpack/: curseforge.rs  misc.rs  mod.rs  modrinth.rs
src-tauri/src/instance/helpers/mods/: common.rs  fabric.rs  forge.rs  legacy_forge.rs  liteloader.rs  main_loader.rs  mod.rs  neoforge.rs  new_forge.rs  old_forge.rs  oldforge.rs  quilt.rs
src-tauri/src/instance/models/: misc.rs  mod.rs
src-tauri/src/instance/models/world/: base.rs  level.rs  mod.rs  player.rs
src-tauri/src/launch/: commands.rs  constant.rs  constants.rs  mod.rs  models.rs
src-tauri/src/launch/helpers/: cmd_builder.rs  command_generator.rs  file_validator.rs  jre_selector.rs  misc.rs  mod.rs  process_monitor.rs
src-tauri/src/launch/helpers/game_version/: alpha.rs  beta.rs  misc.rs  mod.rs  release.rs
src-tauri/src/launcher_config/: commands.rs  constants.rs  helpers.rs  models.rs
src-tauri/src/launcher_config/helpers/: java.rs  memory.rs  misc.rs  mod.rs
src-tauri/src/resource/: commands.rs  helpers.rs  models.rs
src-tauri/src/resource/helpers/: curseforge.rs  curseforge_categories.rs  curseforge_convert.rs  curseforge_misc.rs  fabric_meta.rs  forge_meta.rs  misc.rs  mod.rs  modrinth.rs  modrinth_misc.rs  neoforge_meta.rs  sort.rs  version_manifest.rs
src-tauri/src/resource/helpers/curseforge/: misc.rs  mod.rs
src-tauri/src/resource/helpers/loader_meta/: fabric.rs
src-tauri/src/resource/helpers/mod_loader_meta/: forge.rs  mod.rs  neoforge.rs
src-tauri/src/resource/helpers/modrinth/: misc.rs  mod.rs
src-tauri/src/tasks/: background.rs  commands.rs  download.rs  events.rs  mod.rs  monitor.rs
src-tauri/src/tasks/streams/: desc.rs  handle.rs  mod.rs  reporter.rs  unit.rs
src-tauri/src/utils/: commands.rs  fs.rs  image.rs  mod.rs  nbt.rs  path_util.rs  portable.rs  string.rs  sys_info.rs  var.rs  web.rs  window.rs
src/components/: chakra-color-selector.tsx  download-float-button.tsx  download-indicator.tsx  game-advanced-settings-group.tsx  game-icon-selector.tsx  game-menu.tsx  game-settings-groups.tsx  game-version-selector.tsx  games-grid-view.tsx  games-list-view.tsx  games-view.tsx  global-game-settings.tsx  head-navbar.module.css  head-navbar.tsx  instance-basic-settings.tsx  instance-icon-selector.tsx  instance-menu.tsx  instance-widgets.tsx  instances-view.tsx  language-menu.tsx  logo-title.tsx  memory-status-progress.tsx  mod-loader-cards.tsx  mod-loader-selector.tsx  oauth-login-panel.tsx  player-menu.tsx  players-view.tsx  poster-card.tsx  resource-download-list.tsx  resource-download.tsx  resource-downloader.tsx  resourse-download-menu.tsx  role-menu.tsx  roles-grid-view.tsx  roles-list-view.tsx  roles-view.tsx  shared-modals-provider.tsx  skin-preview.tsx
src/contexts/: config.tsx  data.tsx  global-data.tsx  instance.tsx  routing-history.tsx  shared-modal.tsx  task.tsx  toast.tsx
src/enums/: account.ts  instance.ts  resource.ts  service-error.ts
src/hooks/: animation.ts  deep-link.ts  drag-and-drop.ts  get-state.ts  keyboard-shortcut.ts  resource-refresh.ts  themed-css.ts
src/layouts/: games-layout.tsx  instance-details-layout.tsx  instance-layout.tsx  instances-layout.tsx  main-layout.tsx  settings-layout.tsx
src/locales/: check-diff.js  compare.py  en.json  fr.json  index.js  index.ts  ja.json  zh-Hans.json  zh-Hant.json
src/models/: account.ts  config.ts  download.ts  enums.ts  game-instance-summary.ts  game-instance.ts  instance.ts  launch.ts  misc.ts  news-post.ts  post.ts  resource.ts  response.ts  system-info.ts  task.ts
src/pages/: 404.tsx  _app.tsx  accounts.tsx  downloads.tsx  games.tsx  index.tsx  launch.module.css  launch.tsx
(+155 files in other folders)
