[package]
name = "SJMCL"
version = "0.0.0"
description = "A Minecraft launcher from SJMC"
authors = ["UNIkeEN"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[profile.release]
opt-level = 3    # as default
strip = true
lto = true
panic = "abort"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.1.0"
structstruck = "0.4.1"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["full"] }
systemstat = "0.2.3"
partial_derive = { path = "./libs/partial_derive" }
uuid = { version = "1.11.0", features = ["v4", "v5", "fast-rng",  "macro-diagnostics"] }
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
base64 = "0.22.1"
image = { version = "0.25.5", features = ["serde"] }
rand = "0.9.0"
zip = "2.2"
quartz_nbt = "0.2.9"
regex = "1.11"
futures = "0.3"
toml = "0.8"
lazy_static = "1.5"
jsonwebtoken = "9.3.1"

[target."cfg(windows)".dependencies]
winreg = "0.55.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "2"
