[package]
name = "SJMCL"
version = "0.0.0"
description = "A Minecraft launcher from SJMC"
authors = ["SJMCL Team"]
license = "GNU General Public License v3.0 (with additional terms)"
repository = "https://github.com/UNIkeEN/SJMCL"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }
dotenvy = "0.15.7"

[profile.release]
opt-level = 3   # as default
strip = true
lto = true
panic = "abort"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.1.0"
tauri-plugin-fs = "2.0.1"
structstruck = "0.4.1"
tauri-plugin-http = { version = "2", features = ["json", "stream"] }
tauri-plugin-os = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
systemstat = "0.2.3"
partial_derive = { path = "./libs/partial_derive" }
uuid = { version = "1.11.0", features = [
	"v4",
	"v5",
	"fast-rng",
	"macro-diagnostics",
] }
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
base64 = "0.22.1"
image = { version = "0.25.5", features = ["serde"] }
rand = "0.9.0"
zip = "2.3"
quartz_nbt = { version = "0.2.9", features = ["serde"] }
regex = "1.11"
toml = "0.8"
lazy_static = "1.5"
jsonwebtoken = "9.3.1"
java-properties = "2.0.0"
sha1 = "0.10.1"
hex = "0.4.3"
url = "2.5.4"
pin-project = "1.1.8"
futures = "0.3.31"
governor = { version = "0.8.1", features = ["std"] }
strum = "0.27.1"
strum_macros = "0.27.1"
smart-default = "0.7.1"
tauri-plugin-clipboard-manager = "2.2.2"
serde_with = "3.12.0"
chrono = "0.4.40"
sanitize-filename = "0.6.0"

[target."cfg(windows)".dependencies]
winreg = "0.55.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "2"
